--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site Info
 title: Data science
 tagline: 'by Yngie'
-description: 'blog for textmining'
+description: 'text is everything'
 url: https://yngie-c.github.io
-logo: '/public/logo.png'
+logo: '/public/Homelogo.PNG'
 encoding: utf-8
 
 # Site configurations
