--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Data Science
 tagline: 'by Yngie'
 description: 'text is everything'
 url: https://yngie-c.github.io
-logo: '/public/Homelogo.png'
+logo: '/public/Homelogo.PNG'
 encoding: utf-8
 
 # Site configurations
