--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Data Science
 tagline: 'by Yngie'
 description: 'text is everything'
 url: https://yngie-c.github.io
-logo: '/public/logo.PNG'
+logo: '/public/logo.png'
 encoding: utf-8
 
 # Site configurations
