--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,6 @@ hero:
 
 # Pulgins
 mathjax: true # whether support mathjax
-#google_analytics_token: 'UA-93172815-1' # leave blank if you don't want google analytics
+google_analytics_token: 'UA-158025930-1' # leave blank if you don't want google analytics
 #disqus_short_name: 'ratsgo-github-io' # leave blank if you don't want disqus
 
