--- a/_data/related.yml
+++ b/_data/related.yml
@@ -47,3 +47,17 @@
   - nlp_glove
   - nlp_bert
   - nlp_gpt
+- post: nlp_word2vec
+  related:
+  - nlp_glove
+  - nlp_seq2seq
+  - nlp_transformer
+  - nlp_bert
+  - nlp_gpt
+- post: nlp_glove
+  related:
+  - nlp_word2vec
+  - nlp_seq2seq
+  - nlp_transformer
+  - nlp_bert
+  - nlp_gpt
