--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ encoding: utf-8
 gems:
   - jekyll-paginate
 markdown: kramdown
+highlighter: rouge
 kramdown:
   input: GFM
 excerpt_separator: "<!--more-->"
