--- a/_config.yml
+++ b/_config.yml
@@ -28,13 +28,13 @@ author:
   description: <strong>Increscunt animi virescit volnere virtus</strong> by Friedrich Nietzsche
   gravatar: 8dc8eb5fb70460f5da8e678a7cb47b3f # md5 hash of your email address
   contact:
-    #linkedin:  https://www.linkedin.com/in/gichanglee/
+    #linkedin:  
     github:    https://github.com/Yngie-C
-    #facebook:  https://www.facebook.com/gichanglee.84
+    #facebook:  <hide>
     #twitter:  <hide>
     #weibo:    <hide>
     instagram :   https://instagram.com/yngie_daily
-    # email:
+    # email:  <hide>
 
 # Navigation (2nd level links supported)
 nav:
